--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,8 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
     branches: [ master ]
 
@@ -30,3 +31,11 @@ jobs:
     - run: npm i
     - run: npm run build --if-present
     - run: npm test
+    
+    - name: Deploy to Heroku
+      env: 
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+      if: github.ref == 'refs/heads/master' && job.status == 'success'
+      run: |
+        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
+        git push heroku HEAD:master -f
