--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,10 +32,10 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     
-    - name: Deploy to Heroku
-      env: 
-        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-      if: github.ref == 'refs/heads/master' && job.status == 'success'
-      run: |
-        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
-        git push heroku HEAD:master -f
+    # - name: Deploy to Heroku
+    #   env: 
+    #     HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+    #   if: github.ref == 'refs/heads/master' && job.status == 'success'
+    #   run: |
+    #     git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
+    #     git push heroku HEAD:master -f
