--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,9 +22,11 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - run: |
-          git fetch --prune --unshallow
+    - name: Check out repository
+      uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
+    # - run: |
+    #       git fetch --prune --unshallow
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
@@ -34,11 +36,18 @@ jobs:
     - run: npm i
     - run: npm run build --if-present
     - run: npm test
-    
+
     - name: Deploy to Heroku
-      env: 
-        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-      if: github.ref == 'refs/heads/master' && job.status == 'success'
-      run: |
-        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
-        git push heroku HEAD:master -f
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_TOKEN }}
+        heroku_app_name: radiant-journey-43861
+        heroku_email: tarunbhartiya7@gmail.com
+    
+    # - name: Deploy to Heroku
+    #   env: 
+    #     HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+    #   if: github.ref == 'refs/heads/master' && job.status == 'success'
+    #   run: |
+    #     git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
+    #     git push heroku HEAD:master -f
