--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,10 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - run: |
-          git fetch --prune --unshallow
-    
+    - name: Check out repository
+      uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
+    # - run: |
+    #       git fetch --prune --unshallow
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -30,11 +32,19 @@ jobs:
     - run: npm i
     - run: npm run build --if-present
     - run: npm test
-    
+
     - name: Deploy to Heroku
-      env: 
-        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-      if: github.ref == 'refs/heads/master' && job.status == 'success'
-      run: |
-        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
-        git push heroku HEAD:master -f
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_TOKEN }}
+        heroku_app_name: radiant-journey-43861
+        heroku_email: tarunbhartiya7@gmail.com
+        procfile: "web: npm start"
+    
+    # - name: Deploy to Heroku
+    #   env: 
+    #     HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+    #   if: github.ref == 'refs/heads/master' && job.status == 'success'
+    #   run: |
+    #     git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/radiant-journey-43861.git
+    #     git push heroku HEAD:master -f
