add deploy message

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -35,5 +35,6 @@ jobs:
       with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: d80f408d-9e26-4661-9559-b80dcb79f894
+          NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
           NETLIFY_DEPLOY_TO_PROD: true
 
